--- a/xtra/css/Color-skin3.css
+++ b/xtra/css/Color-skin3.css
@@ -77,7 +77,6 @@ color:black;
 	-moz-opacity:0.9;
 	-khtml-opacity:0.9;
 	position: relative;
-	z-index: 1;
 }
 .asset-ajax{
 	background:#C3E6D8;
@@ -121,7 +120,7 @@ color:black;
   box-shadow: none;
   }
  .btn-primary-button{	
- 	background-color: #48c9b0;
+ 	background-color: #055854;;
  	color:#FFFFFF;
  }
  .ui-content-color-style2 a:hover{
@@ -141,21 +140,6 @@ color:black;
   	-o-transition: all 0.5s ease-in-out;
   	transition: all 0.5s ease-in-out; 
  }
-
-/*buzz*/
-.ui-rpt-mainlist-1:hover,
-.ui-rpt-mainlist-2:hover{
-position: relative;
-height: 48px;
-border-bottom:7px solid #3c5b6c;
-background:#C3E6D8;
--webkit-transition: all 0.5s ease-in-out;
--moz-transition: all 0.5s ease-in-out;
--o-transition: all 0.5s ease-in-out;
-transition: all 0.5s ease-in-out; 
-}
-/*./buzz13/9/18*/
-
 #loginForm:after{
 	border-bottom: 6px solid #FFFF99;
 }
@@ -310,16 +294,13 @@ table.middle_report_tbl tr {background-color:#E6FFED;}*/
 }
 
 .btn-primary{
-	background-color: #EE4000 !important;
+	background-color:red !important;
+	font-family: 'bahnschrift';
 }
 .ui-header-left-color{
-background-color: #EE8833 !important;
+background-color: #f3ece6 !important;
 } 
 
 .color_style_1{
-	background-color: #FFE135 !important;
-}
-
-.ui-rpt-mainlist-1{
-	background:#79B6D8 ;
+	background-color: #797c90 !important;
 }
