--- a/xtra/css/acg.css
+++ b/xtra/css/acg.css
@@ -67,6 +67,8 @@ legend {
 	margin-left:auto;
 	margin-right:auto;
 	color:black;
+	overflow: auto;
+    display: block;
   }
   .form-mcg-top{
 	border-top-right-radius: 5px;
@@ -175,6 +177,7 @@ font-weight:bold;
     margin-right: 0px;
     margin-left: 0px;
     position:absolute;
+	background-color: white;
   }
 }
 
