--- a/xtra/css/phone.css
+++ b/xtra/css/phone.css
@@ -61,9 +61,10 @@
       display:initial;
   }
 
-  .form-control{
+  .form-control2{
     height: 32px;
     padding: 0px 0px 0px;
+	width: 100%;
   }
 
   .login {
@@ -80,9 +81,8 @@
   }
 
   #input-submit{width:98%; height:40px;}
-  #input-login{width:89.7%; height:30px;}
+  #input-login{}
   #footer{
-    display: none;
   }
 
   .icon-key,
@@ -329,13 +329,15 @@
   }
   .ui-middle-screen{
     margin-left: 0px;
-    margin-top:50px;
+    margin-top:55%;
     right:0px;
     width:100%;
     margin-bottom: 0px;
     padding-bottom: 0px;
     overflow-y: visible;
     overflow: hidden;
+	background-color: white;
+    opacity: 0.95;
   }
 
   /************************** END MAIN ********************************/
@@ -373,15 +375,21 @@
     margin: 0px;
     border: 0px;
   }
+   table.ui-content-middle-menu-workorder tr.test{
+   border: 3px solid #E8E8E8;
+	}
+	table.ui-content-middle-menu-workorder tr.test td{
+		text-align: center;
+		background: rgba(255,255,255,.8);   
+	}
+  
   table.ui-content-middle-menu-workorder tr td a{
     font-size:16px;
   }
   img.ui-icon{
-    padding: 8px;
     width:40px;
     height:40px;
     vertical-align: middle;
-    margin-left:20px;
   }
   /************************** END MAIN PAGE ********************************/
   /** baru ***/
@@ -809,7 +817,17 @@
   div.box7{
     float: left;
     display:block;
-    width: 14.28%;
+    width: 33.3333333333333%;
+    text-align:center;
+    position:relative;
+    min-height:0px;
+    padding-right:0px;
+    padding-left:0px;
+  }
+  div.box9{
+    float: left;
+    display:block;
+    width: 20%;
     text-align:center;
     position:relative;
     min-height:0px;
@@ -1151,9 +1169,8 @@
     display: inline-block;
   }
   .divmenu{
-  	width:100%;
   	text-align:center;
-  	font-size:18px;
+  	font-size:17px;
   	padding:5px;
   	font-weight:bold;
   	background:#398074;
@@ -1167,7 +1184,7 @@
   	color:white;
   }
   .divmenuright{
-  	width:10%;
+  	width:5%;
   	float:right;
   }
   #no-more-tables,#no-more-tables thead,#no-more-tables tbody,#no-more-tables th,#no-more-tables td,#no-more-tables tr { 
@@ -1242,8 +1259,6 @@
     /* To horizontally center images and caption */
     text-align: center;
     /* The width of the container also implies margin around the images. */ 
-    margin-right: 30px;
-    margin-left: 50px;
   }
 
   .small-box  .inner2 {
@@ -1292,16 +1307,178 @@
     margin-right: 0px;
     margin-left: auto;
   }
-  /*** end **/
+  .table-middle-screen-2{
+    width: 100%; 
+    table-layout: auto;
+    background-color: white; 
+    opacity: 0.95;
+  }
+  table.table-middle-screen-2 tr td.row{
+	width: 1%; 
+	border-style:none;
+}
+.ui-middle-screen-ch{
+    right:0px;
+    z-index: 2;
+    background-color: white;
+    opacity: 0.95;
+	margin-top: 85px;
+}
+.menu{
+	background-color: 
+	white;position: 
+	fixed;top: 0;
+	width: 100%;
+	left: 0; 
+	z-index: 1;
+}
+table.top{
+		width: 100%;  
+		border: 1px solid #CCC; 
+		border-collapse: collapse;
+	}
+table.top tr.myapbesys3-logo td{
+	text-align:center;
+}
+ table.top tr.myapbesys3-logo td img.myap{
+	 width:120px; 
+	 height:40px;
+ }
+table.top tr.name td.name-hspt{
+background-color:#98aaf9;
+text-align:center;
+width:50%;
+font-size:15px;
+color:black;
+text-transform: uppercase;
+}
+table.top tr.name td.name-full{
+text-align:center; 
+color:white; 
+background-color:#4e81ca;
+}
+table.top tr.name td.name-full span.name-span{ 
+text-transform: uppercase; 
+color: white;
+}
+table.top tr.lgt td span.lgt-span{
+color:white;
+}
+div.content-workorder table.ui-desk-style-table3 tr.ui-header-new td span.spaces{
+	float: right; 
+	padding-right:10px;
+}
+div.content-workorder table.ui-desk-style-table3 tr.ui-header-new td span.spaces2{
+	float: right; 
+	padding-right:2px;
+}
+.tblexcel, .tblexcel tr, .tblexcel tr th{
+	 text-align: left;
+	 margin-left: 0px;
+	 color: black;
+	 padding-top: 0PX;
+	}
+	.tblexcel tr td{
+	 width: 140%;
+     table-layout: fixed;
+	 }
+	.tbltitle, .tbltitle tr {
+     height: 10px;
+     text-align: center;
+     width: 100%;
+     color: black;
+     align-items: center;
+     font-size: 10px;
+     font-weight: 2px;
+	}
+	.ui-icon2 {
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
+
+	}
+	.ui-color-contents-style{
+		opacity: 0.9;
+		filter: alpha(opacity=90);
+		-moz-opacity: 0.9;
+		-khtml-opacity: 0.9;
+		position: relative;
+		width: 100%;
+		z-index: 1;
+	}
+	.ui-color-contents-style tr td h1 {
+		font-weight: bold;
+		text-align: left;
+		color: black;
+		float: left;
+		font-size: 20px;
+	}
+	.ui-color-contents-style tr{
+	   text-align: center;
+	   color: black;
+	}
+	div.middle_report_main{
+    margin-top: 3%;
+	overflow-x: scroll;
+    }
+	.form-control2{
+  padding: 1px 12px;
+  font-size: 15px;
+  color: #34495e;
+  border: 2px solid #bdc3c7;
+  border-radius: 6px;
+  box-shadow: none;
+  font-family: 'bahnschrift';
+  -webkit-transition: border .25s linear, color .25s linear, background-color .25s linear;
+  transition: border .25s linear, color .25s linear, background-color .25s linear;
+}
+.footer-login {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color: white;
+   text-align: center;
+   background-color: white;
+   font-size: 1px;
 }
 
+.footer-login span.font-size{
+	color: black;
+	font-size:10px;
+}
+   
 
+.footer_contents {
 
+    height:24px; // Replace with the height your footer should be
+    width: 1000px; // Visible width of footer
+    margin:auto;
 
-
-
-
-
+}
+.content {
+  min-height: 100%;
+}
+.content-inside {
+  padding: 20px;
+  padding-bottom: 50px;
+}
+.footer2 {
+  height: 50px;
+  margin-top: -50px;
+}
+.footer {
+    position: absolute;
+    left: 0;
+    max-bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+	font-size:10px;
+    /* overflow-x: hidden; */
+}
+  /*** end **/
+}
 /* Smartphones (landscape) ----------- */
 @media only screen and (min-width : 481px) and (max-width: 733px)  and (orientation : landscape) {
 /* Styles */
@@ -1380,7 +1557,7 @@
       display:initial;
   }
 
-  .form-control{
+  .form-control2{
     height: 32px;
     padding: 0px 0px 0px;
   }
@@ -1396,9 +1573,8 @@
     font-size:20px;
   }
   #input-submit{width:98%; height:40px;}
-  #input-login{width:89.7%; height:30px;}
+  #input-login{}
   #footer{
-    display: none;
   } 
   .icon-key,
   .icon-user{
@@ -1661,13 +1837,15 @@
   }
   .ui-middle-screen{
     margin-left: 0px;
-    margin-top:50px;
+    margin-top:25%;
     right:0px;
     width:100%;
     margin-bottom: 0px;
     padding-bottom: 0px;
     overflow-y: visible;
     overflow: hidden;
+	background-color: white;
+    opacity: 0.95;
   }
   /************************** END MAIN ********************************/
   /************************** MAIN PAGE ********************************/
@@ -1696,6 +1874,13 @@
     margin: 0px;
     border: 0px;
   }
+  table.ui-content-middle-menu-workorder tr.test{
+   border: 3px solid #E8E8E8;
+	}
+	table.ui-content-middle-menu-workorder tr.test td{
+		text-align: center;
+		background: rgba(255,255,255,.8);   
+	}
   table.ui-content-middle-menu-workorder tr td a{
     font-size:16px;
   }
@@ -2098,6 +2283,13 @@
     background:#398074 ;
     color: white;
   }
+   table.ui-content-middle-menu-workorder tr.test{
+   border: 3px solid #E8E8E8;
+	}
+	table.ui-content-middle-menu-workorder tr.test td{
+		text-align: center;
+		background: rgba(255,255,255,.8);   
+	}
   div.asset1, div.asset2{
     padding: 5px;
   }
@@ -2159,7 +2351,6 @@
     text-align: center;
   }
   .divmenu{
-  	width:100%;
   	text-align:center;
   	font-size:18px;
   	padding:5px;
@@ -2293,5 +2484,172 @@
     margin-right: 0px;
     margin-left: auto;
   }
+  .table-middle-screen-2{s
+    width: 100%; 
+    table-layout: auto;
+    background-color: white; 
+    opacity: 0.95;
+  }
+  table.table-middle-screen-2 tr td.row{
+	width: 1%; 
+	border-style:none;
+}
+  .ui-middle-screen-ch{
+		right:0px;
+		z-index: 2;
+		background-color: white;
+		opacity: 0.95;
+		margin-top: 55px;
+	}
+  .menu{
+		background-color: 
+		white;position: 
+		fixed;top: 0;
+		width: 100%;
+		left: 0; 
+		z-index: 1;
+	}
+ table.top{
+		width: 100%;  
+		border: 1px solid #CCC; 
+		border-collapse: collapse;
+	}
+ table.top tr.myapbesys3-logo td{
+	text-align:center;
+     }
+ table.top tr.myapbesys3-logo td img.myap{
+	 width:120px; 
+	 height:40px;
+ }
+ table.top tr.name td.name-hspt{
+	background-color:#98aaf9;
+	text-align:center;
+	width:50%;
+	font-size:15px;
+	color:black;
+	text-transform: uppercase;
+	 }
+ table.top tr.name td.name-full{
+	text-align:center; 
+	color:white; 
+	background-color:#4e81ca;
+	 }
+ table.top tr.name td.name-full span.name-span{ 
+	text-transform: uppercase; 
+	color: white;
+	}
+	table.top tr.lgt td span.lgt-span{
+	color:white;
+	}
+ div.content-workorder table.ui-desk-style-table3 tr.ui-header-new td span.spaces{
+	float: right; 
+	padding-right:10px;
+   }
+ div.content-workorder table.ui-desk-style-table3 tr.ui-header-new td span.spaces2{
+	float: right; 
+	padding-right:2px;
+   }
+   .tblexcel, .tblexcel tr, .tblexcel tr th{
+	 width: 56%;
+	 text-align: left;
+	 margin-left: 0px;
+	 color: black;
+	 padding-top: 0PX;
+	}
+	.tblexcel tr td{
+	 width: 140%;
+     table-layout: fixed;
+	 }
+	.tbltitle, .tbltitle tr {
+     height: 10px;
+     text-align: center;
+     width: 100%;
+     color: black;
+     align-items: center;
+     font-size: 25px;
+     font-weight: 2px;
+	}
+	.ui-icon2 {
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
+
+	}
+	.ui-color-contents-style{
+		opacity: 0.9;
+		filter: alpha(opacity=90);
+		-moz-opacity: 0.9;
+		-khtml-opacity: 0.9;
+		position: relative;
+		width: 100%;
+		z-index: 1;
+	}
+	.ui-color-contents-style tr td h1 {
+		font-weight: bold;
+		text-align: center;
+		color: black;
+		height:  10px;
+		float: left;
+	    font-size: 20px;
+	}
+	.ui-color-contents-style tr{
+	   text-align: center;
+	   color: black;
+	}
+	div.middle_report_main{
+    margin-top: 3%;
+	overflow-x: scroll;
+    }
+	div.box7{
+    float: left;
+    display:block;
+    width: 33.3333333333333%;
+    text-align:center;
+    position:relative;
+    min-height:0px;
+    padding-right:0px;
+    padding-left:0px;
+  }
+  div.box9{
+    float: left;
+    display:block;
+    width: 20%;
+    text-align:center;
+    position:relative;
+    min-height:0px;
+    padding-right:0px;
+    padding-left:0px;
+  }
+  .form-control2{
+  padding: 1px 12px;
+  font-size: 15px;
+  color: #34495e;
+  border: 2px solid #bdc3c7;
+  border-radius: 6px;
+  box-shadow: none;
+  font-family: 'bahnschrift';
+  -webkit-transition: border .25s linear, color .25s linear, background-color .25s linear;
+  transition: border .25s linear, color .25s linear, background-color .25s linear;
+}
+.footer-login {
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color: white;
+   text-align: center;
+   background-color: white;
+   font-size: 1px;
+}
+
+.footer {
+    position: absolute;
+    left: 0;
+    max-bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+	font-size: 10px;
+    /* overflow-x: hidden; */
+}
 /*** end **/
 }
