--- a/xtra/css/style.css
+++ b/xtra/css/style.css
@@ -4,24 +4,22 @@
 @import url("phone.css");
 @import "tablet.css";
 @import url("tablet.css");
-@import "laptop.css";
-@import url("laptop.css");
 @import "side.css";
 @import url("side.css");
 
 
 @font-face {
-  font-family: 'ambleregular';
-  src: url('../font/Amble-Regular.eot') format('embedded-opentype'), 
-  url('../font/Amble-Regular.woff') format('woff'), 
-  url('../font/Amble-Regular.ttf')  format('truetype'),
-  url('../font/Amble-Regular.svg#Amble-Regular') format('svg');
+  font-family: 'bahnschrift';
+  src: url('../font/bahnschrift.eot') format('embedded-opentype');
+  src: url('../font/bahnschrift.woff') format('woff');
+  src: url('../font/bahnschrift.ttf')  format('truetype');
+  src: url('../font/bahnschrift.svg#bahnschrift') format('svg');
 }
 /************************** LOGIN ********************************/
 
 html{
-  font-family: 'ambleregular';
-  background: url('../images/background.jpg') no-repeat center center fixed; 
+  font-family: 'bahnschrift';
+  background: url('../images/bg.jpeg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -32,8 +30,8 @@ html{
 }
 
 html.id{
-  font-family: 'ambleregular';
-  background: url('../images/background2.jpg') no-repeat center center fixed; 
+  font-family: 'bahnschrift';
+  background: url('../images/bg.jpeg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -121,6 +119,7 @@ html.id{
   border: 2px solid #bdc3c7;
   border-radius: 6px;
   box-shadow: none;
+  font-family: 'bahnschrift';
   -webkit-transition: border .25s linear, color .25s linear, background-color .25s linear;
   transition: border .25s linear, color .25s linear, background-color .25s linear;
 }
@@ -250,7 +249,27 @@ html.id{
   border-radius: 5px;
   margin: 3px;
 }
+.bg1
+{
+   max-width: 100%;
+   height: 100%;
+   background: url('../images/bg2.jpg');
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: center;
+   }
+/*.hospital
+{
+   width: 40%;
+   height: 40%;
+   background: url('../images/bg3.png');
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   margin-left: 30%;
+   margin-top: 20%;
 
+}*/
 .title-login{line-height: 25px; display:block; margin-left:40px;}
 .title-login2{line-height: 25px; display:inline-block; margin-left:50px;}
 .img-penmedic{width: 450px; height: 120px; margin-top:50px;}
@@ -270,11 +289,11 @@ html.id{
 /************************** END SELECT ********************************/
 /************************** MAIN ********************************/
 .body-screen{
-  font-family: 'ambleregular';
-  src: url('../font/Amble-Regular.eot') format('embedded-opentype'), 
-  url('../font/Amble-Regular.woff') format('woff'), 
-  url('../font/Amble-Regular.ttf')  format('truetype'),
-  url('../font/Amble-Regular.svg#Amble-Regular') format('svg');
+  font-family: 'bahnschrift';
+  src: url('../font/bahnschrift.eot') format('embedded-opentype'), 
+  url('../font/bahnschrift.woff') format('woff'), 
+  url('../font/bahnschrift.ttf')  format('truetype'),
+  url('../font/bahnschrift.svg#bahnschrift') format('svg');
   margin:0px;
   padding: 0px;
   height:100%;
@@ -314,7 +333,7 @@ a:focus {
   margin-left: 20%;
   float:right; 
   width:80%;
-  background-color:#EE8833;
+  background-color:#797c90;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: left;
@@ -356,7 +375,7 @@ a:focus {
 
 .small-box  .inner {
   padding: 10px;
-  height: 70px;
+  height: 50px;
 }
 
 .small-box  .small-box-footer {
@@ -451,9 +470,11 @@ a:focus {
 }
 
 .main-box{
-  text-align:center;
-  width: 100%;
-  margin: auto;
+  /*text-align:center;*/
+  /*width: 30%;*/
+  /*margin: auto;*/
+  text-align: center;
+  margin-top: 1%;
 }
 
 
@@ -463,9 +484,11 @@ a:focus {
 .ui-header-homepage{
   font-size:20px;
 }
-.ui-content-middle-menu-desk{
-  font-size:18px;
-  font-weight:bold;
+.ui-content-middle-menu-desk {
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
 }
 /*************** header ***********/
 .ui-header-homepage{
@@ -622,12 +645,12 @@ textarea.form-control-button{
   position: fixed;
   top: 0;
   left: 0;
- /*width: 20%;*/ /*buzzlee comment on 18jan19*/
+  width: 20%;
   height: 100%;
   /* background-image: url('https://sakuja.files.wordpress.com/2009/05/67239_poster2000.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;*/
-  background-color: #EE8833;
+  background-color: white;
   background-position: left;
   background-size: 100% 100%;
   opacity: .2;
@@ -638,7 +661,7 @@ textarea.form-control-button{
 }
 /*************** User Profile ***********/
 
-/*************** Content Middle ***********/ 
+/*************** Content Middle ***********/
 #button{
   width: 10%;
 }
@@ -665,6 +688,7 @@ textarea.form-control-button{
 .content-workorder{
   padding-top:0px;
   margin-bottom: 2%;
+  margin-top:1%;
 }
 
 div.div-p{
@@ -682,7 +706,7 @@ div.div-p{
   border-collapse:collapse;
   vertical-align:middle;
   font-size: 18px;
-  font-family: 'ambleregular'; 
+  font-family: 'bahnschrift'; 
   width: 98%;
   z-index: 99;
 }
@@ -692,7 +716,7 @@ div.div-p{
   border-collapse:collapse;
   vertical-align:middle;
   font-size: 18px;
-  font-family: 'ambleregular'; 
+  font-family: 'bahnschrift'; 
   width: 98%;
 }
 
@@ -701,7 +725,7 @@ div.div-p{
   border-collapse:collapse;
   vertical-align:middle;
   font-size: 18px;
-  font-family: 'ambleregular'; 
+  font-family: 'bahnschrift'; 
   width: 98%;
 }
 
@@ -710,7 +734,7 @@ div.div-p{
   border-collapse:collapse;
   vertical-align:middle;
   font-size: 18px;
-  font-family: 'ambleregular'; 
+  font-family: 'bahnschrift'; 
   width: 98%;
 }
 
@@ -727,10 +751,16 @@ div.div-p{
 }
 
 .ui-icon{
-  width:50px;
-  height:50px;
+  width:100px;
+  height:100px;
   vertical-align: middle;
-  margin-left:20px;
+  margin-top: 20px;
+}
+
+.ui-icon2{
+  width:70px;
+  height:70px;
+  vertical-align: middle;
 }
 
 .icon-tls{display:inline-block;border:1px solid black;width:79%;}
@@ -1346,7 +1376,8 @@ div.header_report_main {
   font-weight: bold;
 }
 
-div.middle_report_main, div.header_drowdown{
+
+div.header_drowdown{
   margin-top: 3%;
 }
 
@@ -1769,25 +1800,50 @@ background-blend-mode: multiply;
   border-radius: 3px;
 }
 
-.td-desk2{
-  display: inline-block;
-  font-weight: bold;
-  font-size: 14px;
-  padding-left: 80px; 
-}
-.td-desk3{
-  display: inline-block;
-  font-weight: bold;
-  font-size: 12px;
-  padding-left: 30px;
-  width: 125px;
-}
-/*@media only screen and (min-device-width: 1024px) and (max-device-width: 1200px){
-  .ui-left_web , #web {
-    display: intial;
+ table .tblala{
+    width: 100%;
+    table-layout: fixed;
   }
 
-  .ui-left_mobile , #mobile ,table.xxdisplayxx{
-    display: none;
+  .tblala tr td{
+    text-align: center;
+    
   }
-}*/
+  .tblala .wb  td{
+    text-align: center;
+    background: rgba(255,255,255,.8);
+    border: 3px solid #E8E8E8;
+  }
+  h4{
+    font-size: 25px;
+      color: #165694;
+  }
+
+  .table-middle-screen-1{
+    width: 100%; 
+    table-layout: auto;
+    background-color: #ff7f00;
+   
+  }
+  .table-middle-screen-wd{
+    width: 100%; 
+    table-layout: auto;
+    background-color: white; 
+    opacity: 0.95;
+    min-height: 100%;
+    padding-top: 2%;
+  }
+  .scrolltable1 {
+    overflow-y: auto;
+    max-height: 100%;
+  }
+
+  .scrolltable1 table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  .scrolltable1 th {
+    position: sticky;
+    top: 0;
+  }
